@@ -1,3 +1,5 @@
+* Remove implicit field names in ModelStorage.search_read
+
 Version 5.4.0 - 2019-11-04
 * Bug fixes (see mercurial logs for details)
 * Improve tests on depends
